[package]
name = "rusterizer"
version = "0.1.5"
authors = ["Julian Torreno <skorezore@gmail.com>"]

description = "A 3D renderer written in Rust."
keywords = ["3D", "renderer", "gamedev"]
documentation = "http://skorezore.xyz/rusterizer/documentation/rusterizer/index.html"
homepage = "http://skorezore.xyz/rusterizer"
repository = "http://skorezore.xyz/rusterizer/documentation/rusterizer/index.html"
readme = "README.md"
license = "MIT"

[dependencies]
glium = "0.14.0"
tobj = "0.1.1"
